<resources>
    <string name="app_name">COVID19 APP</string>
    <string name="welcome_to_covid19_app">WELCOME TO COVID19 APP</string>
    <string name="prediction">PREDICTION</string>
    <string name="know_symptoms_of_covid19">KNOW SYMPTOMS OF COVID19</string>
    <string name="predict_the_chance_of_you_being_affected">PREDICT THE CHANCE OF YOU BEING AFFECTED</string>
    <string name="how_many_times_did_you_leave_your_house_in_recent_few_days">HOW MANY TIMES DID YOU LEAVE YOUR HOUSE IN RECENT FEW DAYS?</string>
    <string name="enter_the_name_of_the_country_otr_state_where_you_have_recently_travelled">ENTER THE NAME OF THE COUNTRY OTR STATE WHERE YOU HAVE RECENTLY TRAVELLED</string>
    <string name="enter_your_age">ENTER YOUR AGE</string>
    <string name="enter_your_name">ENTER YOUR NAME</string>
    <string name="enter_the_name_of_the_place">ENTER THE NAME OF THE COUNTRY OR STATE WHERE YOU HAVE RECENTLY VISITED</string>
    <string name="to_know_the_common_and_uncommon_trades_of_covid19_flu_and_common_cold_click_here">TO KNOW THE COMMON AND UNCOMMON TRADES OF COVID19, FLU AND COMMON COLD , CLICK HERE</string>
    <string name="click_here_to_know_the_common_and_uncommon_trades_of_covid19_flu_and_common_cold">CLICK HERE TO KNOW THE COMMON AND UNCOMMON TRADES OF COVID19, FLU AND COMMON COLD</string>
    <string name="yes">YES</string>
    <string name="no">NO</string>
    <string name="create_new_account">CREATE NEW ACCOUNT</string>
    <string name="enter_your_email_id">Enter your Email iD</string>
    <string name="signup">SIGNUP</string>
    <string name="sign_up1">SIGN UP.</string>
    <string name="title_activity_google_maps">Map</string>
    <string name="contact_details_of_health_expert">CONTACT DETAILS OF HEALTH EXPERT</string>
    <string name="dr_tushar_shah">Dr.TUSHAR SHAH,</string>
    <string name="dr_m_bhatt">Dr.M BHATT,</string>
    <string name="dr_d_doshi">Dr.D DOSHI,</string>
    <string name="dr_d_rathod">Dr.D RATHOD,</string>
    <string name="dr_r_gwaliani">Dr.R GWALIANI,</string>
    <string name="dr_d_kansara">Dr.D KANSARA,</string>
    <string name="dr_g_kamath">Dr.G KAMATH,</string>
    <string name="dr_s_manglik">Dr.S MANGLIK,</string>
    <string name="dr_j_jain">Dr.J JAIN,</string>
    <string name="dr_a_thakkar">Dr.A THAKKAR,</string>
    <string name="dr_l_bhagat">Dr.L BHAGAT,</string>
    <string name="dr_n_shah">Dr.N SHAH,</string>
    <string name="dr_s_phanse">Dr.S PHANSE,</string>
    <string name="dr_j_shah">Dr.J SHAH,</string>
    <string name="dr_n_zaveri">Dr.N ZAVERI,</string>
    <string name="dr_s_ansari">Dr.S ANSARI,</string>
    <string name="dr_l_kedia">Dr.L KEDIA,</string>
    <string name="dr_b_shukla">Dr.B SHUKLA,</string>
    <string name="dr_s_halwai">Dr.S HALWAI,</string>
    <string name="dr_m_kotian">Dr.M KOTIAN,</string>
    <string name="dr_n_kumar">Dr.N KUMAR,</string>
    <string name="dr_p_bhargav">Dr.P BHARGAV,</string>
    <string name="dr_r_chauhan">Dr.R CHAUHAN,</string>
    <string name="dr_b_kharat">Dr.B KHARAT,</string>
    <string name="dr_s_dhulekar">Dr.S DHULEKAR,</string>
    <string name="dr_s_pandit">Dr.S PANDIT,</string>
    <string name="dr_k_roy">Dr.K ROY,</string>
    <string name="dr_m_sharma">Dr.M SHARMA,</string>
    <string name="for_telephonic_guidance">FOR TELEPHONIC GUIDANCE</string>
    <string name="are_you_suffering_from_any_other_disease">ARE YOU SUFFERING FROM ANY OTHER DISEASE?</string>
    <string name="want_to_see_how_this_epidemic_growing_worldwide">WANT TO SEE HOW THIS EPIDEMIC GROWING WORLDWIDE?</string>
    <string name="click_here">CLICK HERE</string>
    <string name="check_out_the_coronavirus_outbreak_in_your_city">CHECK OUT THE CORONAVIRUS OUTBREAK IN YOUR CITY</string>
    <string name="check_out_the_coronavirus_outbreak_in_your_citynew">CHECK OUT THE CORONAVIRUS OUTBREAK IN YOUR CITY?</string>
    <string name="once_you_proceed_to_this_activity_you_will_be_able_to_see_the_prediction_of_you_being_affected">ONCE YOU PROCEED TO THIS ACTIVITY YOU WILL BE ABLE TO SEE THE PREDICTION OF YOU BEING AFFECTED</string>
</resources>
